// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases css escape-unescape exported tests should work with URLs in CSS: classes 1`] = `
Object {
  "#": "-_style_modules_css-#",
  "##": "-_style_modules_css-##",
  "#.#.#": "-_style_modules_css-#.#.#",
  "#fake-id": "-_style_modules_css-#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "-_style_modules_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "-_style_modules_css--a-b-c-",
  "-a0-34a___f": "-_style_modules_css--a0-34a___f",
  ".": "-_style_modules_css-.",
  "123": "-_style_modules_css-123",
  "1a2b3c": "-_style_modules_css-1a2b3c",
  ":)": "-_style_modules_css-:)",
  ":\`(": "-_style_modules_css-:\`(",
  ":hover": "-_style_modules_css-:hover",
  ":hover:focus:active": "-_style_modules_css-:hover:focus:active",
  "<><<<>><>": "-_style_modules_css-<><<<>><>",
  "<p>": "-_style_modules_css-<p>",
  "?": "-_style_modules_css-?",
  "@": "-_style_modules_css-@",
  "B&W?": "-_style_modules_css-B&W?",
  "[attr=value]": "-_style_modules_css-[attr=value]",
  "_": "-_style_modules_css-_",
  "_test": "-_style_modules_css-_test",
  "class": "-_style_modules_css-class",
  "className": "-_style_modules_css-className",
  "f!o!o": "-_style_modules_css-f!o!o",
  "f'o'o": "-_style_modules_css-f'o'o",
  "f*o*o": "-_style_modules_css-f*o*o",
  "f+o+o": "-_style_modules_css-f+o+o",
  "f/o/o": "-_style_modules_css-f/o/o",
  "f@oo": "-_style_modules_css-f@oo",
  "f\\\\o\\\\o": "-_style_modules_css-f\\\\o\\\\o",
  "foo.bar": "-_style_modules_css-foo.bar",
  "foo/bar": "-_style_modules_css-foo/bar",
  "foo/bar/baz": "-_style_modules_css-foo/bar/baz",
  "foo\\\\bar": "-_style_modules_css-foo\\\\bar",
  "foo\\\\bar\\\\baz": "-_style_modules_css-foo\\\\bar\\\\baz",
  "f~o~o": "-_style_modules_css-f~o~o",
  "m_x_@": "-_style_modules_css-m_x_@",
  "someId": "-_style_modules_css-someId",
  "subClass": "-_style_modules_css-subClass",
  "test": "-_style_modules_css-test",
  "{}": "-_style_modules_css-{}",
  "©": "-_style_modules_css-©",
  "“‘’”": "-_style_modules_css-“‘’”",
  "⌘⌥": "-_style_modules_css-⌘⌥",
  "☺☃": "-_style_modules_css-☺☃",
  "♥": "-_style_modules_css-♥",
  "𝄞♪♩♫♬": "-_style_modules_css-𝄞♪♩♫♬",
  "💩": "-_style_modules_css-💩",
  "😍": "-_style_modules_css-😍",
}
`;

exports[`ConfigTestCases css escape-unescape exported tests should work with URLs in CSS: classes 2`] = `
Object {
  "#": "-_style_modules_css-#",
  "##": "-_style_modules_css-##",
  "#.#.#": "-_style_modules_css-#.#.#",
  "#fake-id": "-_style_modules_css-#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "-_style_modules_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "-_style_modules_css--a-b-c-",
  "-a0-34a___f": "-_style_modules_css--a0-34a___f",
  ".": "-_style_modules_css-.",
  "123": "-_style_modules_css-123",
  "1a2b3c": "-_style_modules_css-1a2b3c",
  ":)": "-_style_modules_css-:)",
  ":\`(": "-_style_modules_css-:\`(",
  ":hover": "-_style_modules_css-:hover",
  ":hover:focus:active": "-_style_modules_css-:hover:focus:active",
  "<><<<>><>": "-_style_modules_css-<><<<>><>",
  "<p>": "-_style_modules_css-<p>",
  "?": "-_style_modules_css-?",
  "@": "-_style_modules_css-@",
  "B&W?": "-_style_modules_css-B&W?",
  "[attr=value]": "-_style_modules_css-[attr=value]",
  "_": "-_style_modules_css-_",
  "_test": "-_style_modules_css-_test",
  "class": "-_style_modules_css-class",
  "className": "-_style_modules_css-className",
  "f!o!o": "-_style_modules_css-f!o!o",
  "f'o'o": "-_style_modules_css-f'o'o",
  "f*o*o": "-_style_modules_css-f*o*o",
  "f+o+o": "-_style_modules_css-f+o+o",
  "f/o/o": "-_style_modules_css-f/o/o",
  "f@oo": "-_style_modules_css-f@oo",
  "f\\\\o\\\\o": "-_style_modules_css-f\\\\o\\\\o",
  "foo.bar": "-_style_modules_css-foo.bar",
  "foo/bar": "-_style_modules_css-foo/bar",
  "foo/bar/baz": "-_style_modules_css-foo/bar/baz",
  "foo\\\\bar": "-_style_modules_css-foo\\\\bar",
  "foo\\\\bar\\\\baz": "-_style_modules_css-foo\\\\bar\\\\baz",
  "f~o~o": "-_style_modules_css-f~o~o",
  "m_x_@": "-_style_modules_css-m_x_@",
  "someId": "-_style_modules_css-someId",
  "subClass": "-_style_modules_css-subClass",
  "test": "-_style_modules_css-test",
  "{}": "-_style_modules_css-{}",
  "©": "-_style_modules_css-©",
  "“‘’”": "-_style_modules_css-“‘’”",
  "⌘⌥": "-_style_modules_css-⌘⌥",
  "☺☃": "-_style_modules_css-☺☃",
  "♥": "-_style_modules_css-♥",
  "𝄞♪♩♫♬": "-_style_modules_css-𝄞♪♩♫♬",
  "💩": "-_style_modules_css-💩",
  "😍": "-_style_modules_css-😍",
}
`;

exports[`ConfigTestCases css escape-unescape exported tests should work with URLs in CSS: css 1`] = `
Array [
  "/* #region \\"./style.modules.css\\" */
/*
- type: css/auto
*/
.-_style_modules_css-class {
	color: red;
}

.-_style_modules_css-class {
	background: blue;
}

.-_style_modules_css-test {
	background: red;
}

.-_style_modules_css-_test {
	background: blue;
}

.-_style_modules_css-className {
	background: red;
}

#-_style_modules_css-someId {
	background: green;
}

.-_style_modules_css-className .-_style_modules_css-subClass {
	color: green;
}

#-_style_modules_css-someId .-_style_modules_css-subClass {
	color: blue;
}

.-_style_modules_css--a0-34a___f {
	color: red;
}

.-_style_modules_css-m_x_\\\\@ {
	margin-left: auto !important;
	margin-right: auto !important;
}

.-_style_modules_css-B\\\\&W\\\\? {
	margin-left: auto !important;
	margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.-_style_modules_css-\\\\:\\\\\`\\\\( {
	color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.-_style_modules_css-1a2b3c {
	color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#-_style_modules_css-\\\\#fake-id {
	color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#-_style_modules_css--a-b-c- {
	color: azure;
}

/* matches the element with id=\\"©\\" */
#-_style_modules_css-© {
	color: black;
}

.-_style_modules_css-♥ { background: lime; }
.-_style_modules_css-© { background: lime; }
.-_style_modules_css-\\\\😍 { background: lime; }
.-_style_modules_css-“‘’” { background: lime; }
.-_style_modules_css-☺☃ { background: lime; }
.-_style_modules_css-⌘⌥ { background: lime; }
.-_style_modules_css-\\\\𝄞♪♩♫♬ { background: lime; }
.-_style_modules_css-\\\\💩 { background: lime; }
.-_style_modules_css-\\\\? { background: lime; }
.-_style_modules_css-\\\\@ { background: lime; }
.-_style_modules_css-\\\\. { background: lime; }
.-_style_modules_css-\\\\:\\\\) { background: lime; }
.-_style_modules_css-\\\\:\\\\\`\\\\( { background: lime; }
.-_style_modules_css-123 { background: lime; }
.-_style_modules_css-1a2b3c { background: lime; }
.-_style_modules_css-\\\\<p\\\\> { background: lime; }
.-_style_modules_css-\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.-_style_modules_css-\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.-_style_modules_css-\\\\# { background: lime; }
.-_style_modules_css-\\\\#\\\\# { background: lime; }
.-_style_modules_css-\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.-_style_modules_css-_ { background: lime; }
.-_style_modules_css-\\\\{\\\\} { background: lime; }
.-_style_modules_css-\\\\#fake-id { background: lime; }
.-_style_modules_css-foo\\\\.bar { background: lime; }
.-_style_modules_css-\\\\:hover { background: lime; }
.-_style_modules_css-\\\\:hover\\\\:focus\\\\:active { background: lime; }
.-_style_modules_css-\\\\[attr\\\\=value\\\\] { background: lime; }
.-_style_modules_css-f\\\\/o\\\\/o { background: lime; }
.-_style_modules_css-f\\\\\\\\o\\\\\\\\o { background: lime; }
.-_style_modules_css-f\\\\*o\\\\*o { background: lime; }
.-_style_modules_css-f\\\\!o\\\\!o { background: lime; }
.-_style_modules_css-f\\\\'o\\\\'o { background: lime; }
.-_style_modules_css-f\\\\~o\\\\~o { background: lime; }
.-_style_modules_css-f\\\\+o\\\\+o { background: lime; }

.-_style_modules_css-foo\\\\/bar {
	background: hotpink;
}

.-_style_modules_css-foo\\\\\\\\bar {
	background: hotpink;
}

.-_style_modules_css-foo\\\\/bar\\\\/baz {
	background: hotpink;
}

.-_style_modules_css-foo\\\\\\\\bar\\\\\\\\baz {
	background: hotpink;
}

:root {
	--main-bg-color: red;
	--main-bg-color-\\\\@2: blue;
}

details {
	background-color: var(--main-bg-color);
	background-color: var(--main-bg-color-\\\\@2);
}

@keyframes -_style_modules_css-f\\\\@oo { from { color: red; } to { color: blue; } }

/* #endregion \\"./style.modules.css\\" */

",
]
`;

exports[`ConfigTestCases css escape-unescape exported tests should work with URLs in CSS: css 2`] = `
Array [
  "/* #region \\"./style.modules.css\\" */
/*
- type: css/auto
*/
.-_style_modules_css-class {
	color: red;
}

.-_style_modules_css-class {
	background: blue;
}

.-_style_modules_css-test {
	background: red;
}

.-_style_modules_css-_test {
	background: blue;
}

.-_style_modules_css-className {
	background: red;
}

#-_style_modules_css-someId {
	background: green;
}

.-_style_modules_css-className .-_style_modules_css-subClass {
	color: green;
}

#-_style_modules_css-someId .-_style_modules_css-subClass {
	color: blue;
}

.-_style_modules_css--a0-34a___f {
	color: red;
}

.-_style_modules_css-m_x_\\\\@ {
	margin-left: auto !important;
	margin-right: auto !important;
}

.-_style_modules_css-B\\\\&W\\\\? {
	margin-left: auto !important;
	margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.-_style_modules_css-\\\\:\\\\\`\\\\( {
	color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.-_style_modules_css-1a2b3c {
	color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#-_style_modules_css-\\\\#fake-id {
	color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#-_style_modules_css--a-b-c- {
	color: azure;
}

/* matches the element with id=\\"©\\" */
#-_style_modules_css-© {
	color: black;
}

.-_style_modules_css-♥ { background: lime; }
.-_style_modules_css-© { background: lime; }
.-_style_modules_css-\\\\😍 { background: lime; }
.-_style_modules_css-“‘’” { background: lime; }
.-_style_modules_css-☺☃ { background: lime; }
.-_style_modules_css-⌘⌥ { background: lime; }
.-_style_modules_css-\\\\𝄞♪♩♫♬ { background: lime; }
.-_style_modules_css-\\\\💩 { background: lime; }
.-_style_modules_css-\\\\? { background: lime; }
.-_style_modules_css-\\\\@ { background: lime; }
.-_style_modules_css-\\\\. { background: lime; }
.-_style_modules_css-\\\\:\\\\) { background: lime; }
.-_style_modules_css-\\\\:\\\\\`\\\\( { background: lime; }
.-_style_modules_css-123 { background: lime; }
.-_style_modules_css-1a2b3c { background: lime; }
.-_style_modules_css-\\\\<p\\\\> { background: lime; }
.-_style_modules_css-\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.-_style_modules_css-\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.-_style_modules_css-\\\\# { background: lime; }
.-_style_modules_css-\\\\#\\\\# { background: lime; }
.-_style_modules_css-\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.-_style_modules_css-_ { background: lime; }
.-_style_modules_css-\\\\{\\\\} { background: lime; }
.-_style_modules_css-\\\\#fake-id { background: lime; }
.-_style_modules_css-foo\\\\.bar { background: lime; }
.-_style_modules_css-\\\\:hover { background: lime; }
.-_style_modules_css-\\\\:hover\\\\:focus\\\\:active { background: lime; }
.-_style_modules_css-\\\\[attr\\\\=value\\\\] { background: lime; }
.-_style_modules_css-f\\\\/o\\\\/o { background: lime; }
.-_style_modules_css-f\\\\\\\\o\\\\\\\\o { background: lime; }
.-_style_modules_css-f\\\\*o\\\\*o { background: lime; }
.-_style_modules_css-f\\\\!o\\\\!o { background: lime; }
.-_style_modules_css-f\\\\'o\\\\'o { background: lime; }
.-_style_modules_css-f\\\\~o\\\\~o { background: lime; }
.-_style_modules_css-f\\\\+o\\\\+o { background: lime; }

.-_style_modules_css-foo\\\\/bar {
	background: hotpink;
}

.-_style_modules_css-foo\\\\\\\\bar {
	background: hotpink;
}

.-_style_modules_css-foo\\\\/bar\\\\/baz {
	background: hotpink;
}

.-_style_modules_css-foo\\\\\\\\bar\\\\\\\\baz {
	background: hotpink;
}

:root {
	--main-bg-color: red;
	--main-bg-color-\\\\@2: blue;
}

details {
	background-color: var(--main-bg-color);
	background-color: var(--main-bg-color-\\\\@2);
}

@keyframes -_style_modules_css-f\\\\@oo { from { color: red; } to { color: blue; } }

/* #endregion \\"./style.modules.css\\" */

",
]
`;

exports[`ConfigTestCases css large exported tests should allow to create css modules: dev 1`] = `
Object {
  "placeholder": "my-app-_tailwind_module_css-placeholder-gray-700",
}
`;

exports[`ConfigTestCases css large exported tests should allow to create css modules: prod 1`] = `
Object {
  "placeholder": "-_6d72b53b84605386-placeholder-gray-700",
}
`;

exports[`ConfigTestCases custom-modules json-custom exported tests should transform toml to json 1`] = `
Object {
  "owner": Object {
    "bio": "GitHub Cofounder & CEO
Likes tater tots and beer.",
    "dob": "1979-05-27T07:32:00.000Z",
    "name": "Tom Preston-Werner",
    "organization": "GitHub",
  },
  "title": "TOML Example",
}
`;
